MDEV-8280: crash in 'show global status' with --skip-grant-tables

The crash was caused by attempting to use a hashtable without
it getting initialized, due to the --skip-grant-tables switch.